<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/white_curve_btn"
        android:orientation="vertical"
        android:layout_margin="10dp">


        <TextView
            android:id="@+id/text_Q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/ques1"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_A1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/ans1"
            android:textSize="16sp" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="#968D8D" />


        <TextView
            android:id="@+id/text_Q2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/ques2"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_A2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/ans2"
            android:textSize="16sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="#968D8D" />

        <TextView
            android:id="@+id/text_Q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:fontFamily="@font/roboto_medium"

            android:text="@string/ques3"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_A3"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/ans3"
            android:textSize="16sp" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="#968D8D" />

        <TextView
            android:id="@+id/text_Q4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:fontFamily="@font/roboto_medium"

            android:text="@string/ques4"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_A4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/ans4"
            android:textSize="16sp" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="#968D8D" />

        <TextView
            android:id="@+id/text_Q5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/ques5"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_medium"
            />

        <TextView
            android:id="@+id/text_A5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/ans5"
            android:textSize="16sp" />

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="#968D8D" />
        <TextView
            android:id="@+id/text_Q6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/ques6"
            android:fontFamily="@font/roboto_medium"

            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/text_A6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/ans6"
            android:textSize="16sp" />

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="#968D8D" />
        <TextView
            android:id="@+id/text_Q7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:fontFamily="@font/roboto_medium"

            android:text="@string/ques7"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/text_A7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/ans7"
            android:textSize="16sp" />

        <View
            android:id="@+id/view7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="#968D8D" />
        <TextView
            android:id="@+id/text_Q8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:fontFamily="@font/roboto_medium"

            android:text="@string/ques8"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/text_A8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:fontFamily="@font/roboto_regular"

            android:text="@string/ans8"
            android:textSize="16sp" />

        <View
            android:id="@+id/view8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="#968D8D" />
        <TextView
            android:id="@+id/text_Q9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:fontFamily="@font/roboto_medium"

            android:text="@string/ques9"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/text_A9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:fontFamily="@font/roboto_regular"

            android:text="@string/ans9"
            android:textSize="16sp" />

        <View
            android:id="@+id/view9"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="#968D8D" />
        <TextView
            android:id="@+id/text_Q10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:fontFamily="@font/roboto_medium"

            android:text="@string/ques10"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/text_A10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/ans10"
            android:textSize="16sp" />
        <View
            android:id="@+id/view10"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="#968D8D" />


    </LinearLayout>
</ScrollView>

