<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSort"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="#fff"
                android:gravity="center"
                android:text="Sort"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvFilter"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="Filter"
                android:textColor="#000"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFilter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tvClearAll"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/byRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:text="@string/by_rating"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/below200"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:text="@string/below_200"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/between200300"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:text="@string/_200_300"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/between300500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:text="@string/_300_500"
                android:textSize="14sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:text="@string/by_price"
                android:textSize="16sp" />


            <CheckBox
                android:id="@+id/star4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:text="@string/_4_amp_above"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/star3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:text="@string/_3_amp_above"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/star2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:text="@string/_2_amp_above"
                android:textSize="14sp" />



            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#212121"
                android:paddingBottom="8dp"
                android:paddingTop="8dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSort"
            android:layout_width="0dp"
            android:layout_below="@id/tvClearAll"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:visibility= "visible">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_sort"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="8dp">

                <RadioButton
                    android:id="@+id/rbCost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cost_for_one" />

                <RadioButton
                    android:id="@+id/rbRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/rating"
                    android:textStyle="normal" />

            </RadioGroup>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Cancel"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tvApplyFilter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/red_curve_btn"
            android:gravity="center"
            android:text="Apply Filters"
            android:textColor="#fff"
            android:textSize="16sp" />


    </LinearLayout>


    <TextView
        android:id="@+id/tvClearAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="Clear All"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />
</RelativeLayout>